--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -543,11 +544,18 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Add Question" id="mh1-Ha-dPl">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="Ymw-78-Lt2">
-                            <connections>
-                                <action selector="saveButtonTapped:" destination="lzb-Fz-lQQ" id="TwF-xC-Kbl"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem tag="1000" title="Save" id="Ymw-78-Lt2">
+                                <connections>
+                                    <action selector="saveButtonTapped:" destination="lzb-Fz-lQQ" id="TwF-xC-Kbl"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem tag="1001" title="Publish" id="ooI-4S-Ry0">
+                                <connections>
+                                    <action selector="publishButtonTapped:" destination="lzb-Fz-lQQ" id="c9c-Qc-PHS"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
