--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -421,7 +422,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EF-Zs-aIE">
-                                            <rect key="frame" x="111" y="78" width="245" height="21"/>
+                                            <rect key="frame" x="111" y="78" width="100" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -435,22 +436,37 @@
                                             <color key="textColor" red="1" green="0.1303893758959831" blue="0.025332441348791868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5T-4R-WfN">
+                                            <rect key="frame" x="286" y="71" width="70" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="H5T-4R-WfN" secondAttribute="height" multiplier="7:3" id="0Lo-Un-5if"/>
+                                                <constraint firstAttribute="width" constant="70" id="27A-l7-nNJ"/>
+                                                <constraint firstAttribute="height" constant="30" id="uq7-oh-MIK"/>
+                                            </constraints>
+                                            <state key="normal" title="Publish"/>
+                                            <connections>
+                                                <action selector="publishRowButtonTapped:" destination="495-lb-Qk8" eventType="touchUpInside" id="Qec-7y-kbu"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="5EF-Zs-aIE" secondAttribute="trailing" constant="11" id="CM5-O7-9MD"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="H5T-4R-WfN" secondAttribute="trailing" constant="11" id="Efa-dS-RYW"/>
                                         <constraint firstItem="Uls-2M-17Z" firstAttribute="leading" secondItem="jOA-2K-0D3" secondAttribute="leading" id="FX7-y8-3Z8"/>
-                                        <constraint firstItem="Uls-2M-17Z" firstAttribute="baseline" secondItem="5EF-Zs-aIE" secondAttribute="baseline" id="LFi-bH-XSK"/>
+                                        <constraint firstItem="H5T-4R-WfN" firstAttribute="leading" secondItem="5EF-Zs-aIE" secondAttribute="trailing" constant="75" id="GFK-BJ-gro"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="0k8-5I-8jA" secondAttribute="trailing" constant="11" id="Lmg-aM-Wf6"/>
                                         <constraint firstItem="jOA-2K-0D3" firstAttribute="top" secondItem="0k8-5I-8jA" secondAttribute="bottom" constant="11" id="Md0-Y5-5wi"/>
                                         <constraint firstItem="0k8-5I-8jA" firstAttribute="leading" secondItem="wqu-zZ-63M" secondAttribute="leadingMargin" constant="11" id="P3T-Sc-jtl"/>
                                         <constraint firstItem="0k8-5I-8jA" firstAttribute="top" secondItem="wqu-zZ-63M" secondAttribute="topMargin" id="gCG-Jn-TNl"/>
-                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="top" secondItem="jOA-2K-0D3" secondAttribute="bottom" constant="8" symbolic="YES" id="ihc-j8-sTI"/>
-                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="leading" secondItem="Uls-2M-17Z" secondAttribute="trailing" constant="8" symbolic="YES" id="sbP-KI-yA5"/>
+                                        <constraint firstItem="H5T-4R-WfN" firstAttribute="bottom" secondItem="wqu-zZ-63M" secondAttribute="bottomMargin" id="hXJ-fg-9l0"/>
+                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="baseline" secondItem="Uls-2M-17Z" secondAttribute="baseline" id="qez-Gb-s1D"/>
+                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="top" secondItem="jOA-2K-0D3" secondAttribute="bottom" constant="8" symbolic="YES" id="s8K-Zn-I1e"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="jOA-2K-0D3" secondAttribute="trailing" constant="11" id="uDm-7K-FAm"/>
+                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="leading" secondItem="Uls-2M-17Z" secondAttribute="trailing" constant="8" symbolic="YES" id="uvM-Pe-m8U"/>
                                         <constraint firstItem="jOA-2K-0D3" firstAttribute="leading" secondItem="wqu-zZ-63M" secondAttribute="leadingMargin" constant="11" id="xEq-sG-rpf"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="publishButton" destination="H5T-4R-WfN" id="V7K-rf-iXu"/>
                                     <outlet property="queDurationLbl" destination="5EF-Zs-aIE" id="iOT-pn-gz9"/>
                                     <outlet property="queQueLbl" destination="jOA-2K-0D3" id="4ka-ms-2Ct"/>
                                     <outlet property="queTitleLbl" destination="0k8-5I-8jA" id="laG-sI-QfM"/>
@@ -477,7 +493,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nol-Td-0Ac" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3665.5" y="-289.5"/>
+            <point key="canvasLocation" x="3664.8000000000002" y="-290.10494752623691"/>
         </scene>
         <!--Add Question-->
         <scene sceneID="KU2-cB-HOa">
