--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -218,29 +218,29 @@
                                 <rect key="frame" x="0.0" y="72" width="375" height="402"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userIcon" translatesAutoresizingMaskIntoConstraints="NO" id="eUb-At-Wdd" userLabel="photo">
-                                        <rect key="frame" x="62.5" y="0.0" width="250" height="250"/>
+                                        <rect key="frame" x="63" y="0.0" width="250" height="250"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="GhN-5N-Fmc"/>
                                             <constraint firstAttribute="height" constant="250" id="slI-06-Dbw"/>
                                         </constraints>
                                     </imageView>
-                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dMc-Sy-DMj" userLabel="photoActivity">
-                                        <rect key="frame" x="177.5" y="258.5" width="20" height="20"/>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dMc-Sy-DMj" userLabel="photoActivity">
+                                        <rect key="frame" x="178" y="264" width="20" height="0.0"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJP-Gf-z7i" userLabel="email">
-                                        <rect key="frame" x="173" y="287" width="29.5" height="20.5"/>
+                                        <rect key="frame" x="173" y="265" width="30" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGf-tC-iZl" userLabel="name">
-                                        <rect key="frame" x="173" y="315.5" width="29.5" height="20.5"/>
+                                        <rect key="frame" x="173" y="302" width="30" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are logged in as" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kss-ey-zn2">
-                                        <rect key="frame" x="110.5" y="344.5" width="154.5" height="21"/>
+                                        <rect key="frame" x="110" y="338" width="155" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="3cg-Be-KZV"/>
                                         </constraints>
@@ -423,6 +423,9 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EF-Zs-aIE">
                                             <rect key="frame" x="111" y="78" width="100" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="Qql-4T-emq"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -436,14 +439,12 @@
                                             <color key="textColor" red="1" green="0.1303893758959831" blue="0.025332441348791868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5T-4R-WfN">
-                                            <rect key="frame" x="286" y="71" width="70" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5T-4R-WfN">
+                                            <rect key="frame" x="312" y="57" width="44" height="44"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="H5T-4R-WfN" secondAttribute="height" multiplier="7:3" id="0Lo-Un-5if"/>
-                                                <constraint firstAttribute="width" constant="70" id="27A-l7-nNJ"/>
-                                                <constraint firstAttribute="height" constant="30" id="uq7-oh-MIK"/>
+                                                <constraint firstAttribute="width" secondItem="H5T-4R-WfN" secondAttribute="height" multiplier="1:1" id="Aio-qp-evc"/>
                                             </constraints>
-                                            <state key="normal" title="Publish"/>
+                                            <state key="normal" image="PublishQuestion"/>
                                             <connections>
                                                 <action selector="publishRowButtonTapped:" destination="495-lb-Qk8" eventType="touchUpInside" id="Qec-7y-kbu"/>
                                             </connections>
@@ -452,16 +453,17 @@
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="H5T-4R-WfN" secondAttribute="trailing" constant="11" id="Efa-dS-RYW"/>
                                         <constraint firstItem="Uls-2M-17Z" firstAttribute="leading" secondItem="jOA-2K-0D3" secondAttribute="leading" id="FX7-y8-3Z8"/>
-                                        <constraint firstItem="H5T-4R-WfN" firstAttribute="leading" secondItem="5EF-Zs-aIE" secondAttribute="trailing" constant="75" id="GFK-BJ-gro"/>
+                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="baseline" secondItem="Uls-2M-17Z" secondAttribute="baseline" id="HXL-g1-0on"/>
+                                        <constraint firstItem="H5T-4R-WfN" firstAttribute="top" secondItem="0k8-5I-8jA" secondAttribute="bottom" constant="19" id="IYb-tF-D1f"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="0k8-5I-8jA" secondAttribute="trailing" constant="11" id="Lmg-aM-Wf6"/>
                                         <constraint firstItem="jOA-2K-0D3" firstAttribute="top" secondItem="0k8-5I-8jA" secondAttribute="bottom" constant="11" id="Md0-Y5-5wi"/>
                                         <constraint firstItem="0k8-5I-8jA" firstAttribute="leading" secondItem="wqu-zZ-63M" secondAttribute="leadingMargin" constant="11" id="P3T-Sc-jtl"/>
+                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="baseline" secondItem="H5T-4R-WfN" secondAttribute="baseline" id="TMJ-in-X9g"/>
+                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="leading" secondItem="Uls-2M-17Z" secondAttribute="trailing" constant="8" symbolic="YES" id="bJo-MW-az2"/>
                                         <constraint firstItem="0k8-5I-8jA" firstAttribute="top" secondItem="wqu-zZ-63M" secondAttribute="topMargin" id="gCG-Jn-TNl"/>
                                         <constraint firstItem="H5T-4R-WfN" firstAttribute="bottom" secondItem="wqu-zZ-63M" secondAttribute="bottomMargin" id="hXJ-fg-9l0"/>
-                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="baseline" secondItem="Uls-2M-17Z" secondAttribute="baseline" id="qez-Gb-s1D"/>
-                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="top" secondItem="jOA-2K-0D3" secondAttribute="bottom" constant="8" symbolic="YES" id="s8K-Zn-I1e"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="H5T-4R-WfN" secondAttribute="trailing" constant="11" id="jzS-Nz-dWc"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="jOA-2K-0D3" secondAttribute="trailing" constant="11" id="uDm-7K-FAm"/>
-                                        <constraint firstItem="5EF-Zs-aIE" firstAttribute="leading" secondItem="Uls-2M-17Z" secondAttribute="trailing" constant="8" symbolic="YES" id="uvM-Pe-m8U"/>
                                         <constraint firstItem="jOA-2K-0D3" firstAttribute="leading" secondItem="wqu-zZ-63M" secondAttribute="leadingMargin" constant="11" id="xEq-sG-rpf"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -584,7 +586,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ffF-A2-WCn" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="jtA-JS-lqf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jtA-JS-lqf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -696,6 +698,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="PublishQuestion" width="30" height="30"/>
         <image name="userIcon" width="400" height="277"/>
     </resources>
 </document>
