--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -342,28 +342,44 @@
             </objects>
             <point key="canvasLocation" x="2862" y="549"/>
         </scene>
-        <!--Presenter EventsCVC-->
+        <!--My Events-->
         <scene sceneID="JbI-IN-bhk">
             <objects>
                 <collectionViewController id="I7X-Cy-m0X" customClass="PresenterEventsCVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="uEn-SY-Op0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nbu-6g-cJ8">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="nbu-6g-cJ8">
+                            <size key="itemSize" width="104" height="115"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="e9v-tq-Eq8">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="presenterEventCell" id="e9v-tq-Eq8" customClass="PresenterEventCollectionCell" customModule="DDVP" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="104" height="115"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="104" height="115"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="presenter-event-holder" translatesAutoresizingMaskIntoConstraints="NO" id="sIu-a0-owM">
+                                            <rect key="frame" x="8" y="5" width="88" height="88"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wP4-On-QGT">
+                                            <rect key="frame" x="8" y="93" width="88" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </view>
+                                <connections>
+                                    <outlet property="eventImage" destination="sIu-a0-owM" id="HpX-2g-R0W"/>
+                                    <outlet property="eventName" destination="wP4-On-QGT" id="BrK-ra-aq3"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -371,6 +387,19 @@
                             <outlet property="delegate" destination="I7X-Cy-m0X" id="0eM-HZ-6rQ"/>
                         </connections>
                     </collectionView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="My Events" id="Zjy-l3-aEV">
+                        <barButtonItem key="rightBarButtonItem" title="+" id="CY5-OR-Rjm">
+                            <connections>
+                                <action selector="addEventBtnTapped:" destination="I7X-Cy-m0X" id="nds-9J-Dbr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="btnAddEvent" destination="CY5-OR-Rjm" id="IYU-5x-D3b"/>
+                        <segue destination="495-lb-Qk8" kind="show" identifier="segueToPresenterQuestionList" id="TfD-jm-JGf"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="irC-VX-Gxh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -742,6 +771,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="presenter-event-holder" width="1016" height="1018"/>
         <image name="userIcon" width="400" height="277"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="TfD-jm-JGf"/>
+    </inferredMetricsTieBreakers>
 </document>
